--- a/source/components/main.scss
+++ b/source/components/main.scss
@@ -8,7 +8,7 @@
     background: #F2F2F2;
     @include flexiblePlacement(none, none, none, none);
     font-family: 'Josefin Sans', sans-serif;
-    weight: 300px;
+    font-weight: 400px;
 }
 
 @import './header';
