refactor: add a background in the header for better readability

--- a/source/components/_header.scss
+++ b/source/components/_header.scss
@@ -1,8 +1,9 @@
 .header {
     background: url(../img/header/backgrond.svg) no-repeat;
-    width: 1440px;
+    width: 100%;
     background-size: cover;
-    padding: 64px 165px 146px 165px;
+    padding: 64px 165px 146px;
+    background-color: black;
 
     &__nav {
         @include flexiblePlacement(space-between, none, none, none);
@@ -53,8 +54,5 @@
         text-transform: uppercase;
         padding: 40px;
     }
-
-
-
 }
 
