--- a/source/components/main.scss
+++ b/source/components/main.scss
@@ -5,7 +5,7 @@
 .wrapper {
     width: 95%;
     margin: 0 auto;
-    background: #F2F2F2;
+    background: #fff;
     @include flexiblePlacement(none, none, column, none);
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400px;
