--- a/source/components/_main.scss
+++ b/source/components/_main.scss
@@ -1,6 +1,6 @@
 .main {
     @include flexiblePlacement(none, none, column, none);
-    margin: 202px 163px 184px;
+    margin: 160px 163px 184px;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400px;
 }
@@ -8,6 +8,7 @@
 .main-intro {
     @include flexiblePlacement(none, none, none, none);
     position: relative;
+    margin-bottom: 142px;
 
     &__img {
         background: url(../img/main/man-photo.svg) no-repeat;
@@ -41,5 +42,41 @@
         color: #000000;
         opacity: 0.5;
     }
+}
+
+.main-box--head {
+    @include flexiblePlacement(none, none, none, none);
+    margin-bottom: 70px;
+}
+
+.main__btn {
+    width: 157px;
+    height: 40px;
+    border: 1px solid #000000;
+    background: white;
+    margin-left: auto;
+    font-size: 14px;
+    letter-spacing: 5px;
+}
+
+.main__btn:hover {
+    border: none;
+    background: #000000;
+    color: white;
+}
+
+.main__title {
+    font-size: 48px;
+    line-height: 48px;
+    color: black;
+}
+
+.main__list {
+    @include flexiblePlacement(none, none, none, none);
+}
+
+.main__item {
+    
+    background: yellowgreen;
 
 }
