--- a/source/components/main.css
+++ b/source/components/main.css
@@ -266,7 +266,7 @@ input {
           flex-direction: column;
   -ms-flex-wrap: none;
       flex-wrap: none;
-  margin: 202px 163px 184px;
+  margin: 160px 163px 184px;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 400px;
 }
@@ -288,6 +288,7 @@ input {
   -ms-flex-wrap: none;
       flex-wrap: none;
   position: relative;
+  margin-bottom: 142px;
 }
 
 .main-intro__img {
@@ -335,6 +336,69 @@ input {
   line-height: 25px;
   color: #000000;
   opacity: 0.5;
+}
+
+.main-box--head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: none;
+      -ms-flex-pack: none;
+          justify-content: none;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: none;
+          flex-direction: none;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
+  margin-bottom: 70px;
+}
+
+.main__btn {
+  width: 157px;
+  height: 40px;
+  border: 1px solid #000000;
+  background: white;
+  margin-left: auto;
+  font-size: 14px;
+  letter-spacing: 5px;
+}
+
+.main__btn:hover {
+  border: none;
+  background: #000000;
+  color: white;
+}
+
+.main__title {
+  font-size: 48px;
+  line-height: 48px;
+  color: black;
+}
+
+.main__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: none;
+      -ms-flex-pack: none;
+          justify-content: none;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: none;
+          flex-direction: none;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
+}
+
+.main__item {
+  background: yellowgreen;
 }
 
 .footer {
