--- a/source/components/_main.scss
+++ b/source/components/_main.scss
@@ -72,73 +72,90 @@
 }
 
 .main__list {
-    @include flexiblePlacement(none, none, none, wrap);
+    @include flexiblePlacement(space-between, none, none, wrap);
     -webkit-box-align: stretch;
     -webkit-align-items: stretch;
 }
 
 .main__item {
-    position: relative;
+    @include flexiblePlacement(none, flex-end, none, none);
     width: 256px;
     height: 450px;
-    margin: 0 15px 15px 15px;
-    background-color: black;
+    font-size: 32px; 
+    color: #fff;
+    padding: 0 40px 32px 40px;
+    cursor: pointer;
+}
+
+.main__item:nth-child(-n+4) {
+    margin-bottom: 30px;
 }
 
 .main__item:nth-child(1) {
-    margin-left: 0;
-    background: url(../img/main/earth.svg) no-repeat;
+    background: url(../img/main/earth.svg);
 }
 
 .main__item:nth-child(2) {
-    background: url(../img/main/bitmap.svg) no-repeat;
+    background: url(../img/main/arcade.svg);
 }
 
 .main__item:nth-child(3) {
-    background: url(../img/main/soccer.svg) no-repeat;
+    background: url(../img/main/soccer.svg);
 }
 
 .main__item:nth-child(4) {
-    margin-right: 0;
     background: url(../img/main/grid.svg);
+    padding-right: 70px;
 }
 
 .main__item:nth-child(5) {
-    margin-left: 0;
     background: url(../img/main/road.svg);
 }
 
 .main__item:nth-child(6) {
-    background: url(../img/main/bitmap.svg) no-repeat;
+    background: url(../img/main/bitmap.svg);
 }
 
 .main__item:nth-child(7) {
-    background: url(../img/main/robot.svg) no-repeat;
+    background: url(../img/main/robot.svg);
 }
 
 .main__item:nth-child(8) {
-    margin-right: 0;
     background: url(../img/main/fisheye.svg);
 }
 
-.main__item:nth-last-child(-n+4) {
-    margin-bottom: 0;
-    margin-top: 15px;
+.main__item:hover {
+    color: black;    
 }
 
-.main__link {
-    text-transform: uppercase;
-    color: #FFFFFF;
-    font-size: 32px;
-    position: absolute;
-    bottom: 0;
-    margin: 0 67px 34px 40px;
+.main__item:hover:nth-child(1) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/earth.svg) no-repeat;
 }
 
-.main__link:hover {
-    color: black;
+.main__item:hover:nth-child(2) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/arcade.svg) no-repeat;
 }
 
-.text-big {
-    margin-right: 0px;
+.main__item:hover:nth-child(3) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/soccer.svg) no-repeat;
+}
+
+.main__item:hover:nth-child(4) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/grid.svg) no-repeat;
+}
+
+.main__item:hover:nth-child(5) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/road.svg) no-repeat;
+}
+
+.main__item:hover:nth-child(6) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/bitmap.svg) no-repeat;
+}
+
+.main__item:hover:nth-child(7) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/robot.svg) no-repeat;
+}
+
+.main__item:hover:nth-child(8) {
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/main/fisheye.svg) no-repeat;
 }
