--- a/source/components/config/_media.scss
+++ b/source/components/config/_media.scss
@@ -47,6 +47,7 @@
         margin: 40px 24px 227px 0;
         @include flexiblePlacement(center, center, none, none);
         width: 100%;
+        position: relative;
     }
 }
 
@@ -63,6 +64,12 @@
         width: 327px;
         font-size: 40px;
 
+    }
+
+    .main__btn {
+        position: absolute;
+        bottom: 0;
+        margin-top: 50px;
     }
 
 
