--- a/source/components/main.css
+++ b/source/components/main.css
@@ -150,6 +150,34 @@ input {
   font-weight: 400px;
 }
 
+.mobile-menu {
+  display: none;
+  width: 100%;
+  background: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
+}
+
+.mobile-menu__logo {
+  background: url(../img/header/logo.svg) no-repeat;
+  width: 197px;
+  height: 32px;
+  display: block;
+}
+
 .header {
   background: url(../img/header/backgrond.svg) no-repeat;
   width: 100%;
@@ -798,6 +826,10 @@ input {
     width: 100%;
     position: relative;
   }
+}
+
+.mobile-menu {
+  display: block;
 }
 
 @media (max-width: 1050px) {
