--- a/source/components/main.css
+++ b/source/components/main.css
@@ -179,12 +179,37 @@ input {
   text-transform: uppercase;
 }
 
+.mobile-menu__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: none;
+          flex-direction: none;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
+}
+
 .mobile-menu__item:not(:last-child) {
   margin-bottom: 24px;
 }
 
+.mobile-menu__btn {
+  background: url(../img/mobile-menu/burger-menu.svg) no-repeat;
+  width: 24px;
+  height: 16px;
+  border: none;
+}
+
 .mobile-menu__logo {
-  background: url(../img/header/logo.svg) no-repeat;
+  background: url(../img/mobile-menu/logo.svg) no-repeat;
   width: 197px;
   height: 32px;
   display: block;
