--- a/source/components/config/_variables.scss
+++ b/source/components/config/_variables.scss
@@ -11,6 +11,8 @@ $sideBarShadow: 14.0351px 0px 25px rgba(86, 128, 248, 0.03), 35.0877px 0px 70px 
 
 $dialogsButtonShadow: 6px 6px 25px rgba(42, 139, 242, 0.15), 4px 4px 25px rgba(42, 139, 242, 0.05), 10px 6px 25px rgba(42, 139, 242, 0.15);
 
+//Linear-gradient 
+$linearGradient: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
 
 // Background
 
