--- a/source/components/main.css
+++ b/source/components/main.css
@@ -150,70 +150,320 @@ input {
   font-weight: 400px;
 }
 
-.burger-menu {
+.header-mobile {
+  background: black;
+  width: 100%;
+}
+
+.logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: none;
-      -ms-flex-pack: none;
-          justify-content: none;
-  -webkit-box-align: none;
-      -ms-flex-align: none;
-          align-items: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: none;
-      flex-wrap: none;
-  padding: 40px 24px;
-  display: none;
-  width: 100%;
-  background: black;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: url(../img/mobile-menu/logo.svg) no-repeat;
+  width: 160px;
+  height: 32px;
+  background-size: contain;
 }
 
-.bmbtn {
-  width: 24px;
-  height: 16px;
-  border: none;
-  background: url(../img/mobile-menu/burger-menu.svg) no-repeat;
+.logo > li > a:hover {
+  text-decoration: none;
 }
 
-.mobile-menu__link {
-  text-transform: uppercase;
-  font-size: 24px;
-  line-height: 25px;
-  color: white;
+.nav__number > li > a:hover {
+  text-decoration: none;
+}
+
+.view-more:hover {
+  text-decoration: none;
 }
 
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: none;
-      -ms-flex-align: none;
-          align-items: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: none;
-          flex-direction: none;
-  -ms-flex-wrap: none;
-      flex-wrap: none;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 125px;
+  padding-right: 125px;
+  padding-top: 40px;
 }
 
-.mobile-menu__logo {
-  width: 197px;
-  height: 32px;
-  display: block;
-  margin-bottom: 160px;
-  background: url(../img/mobile-menu/logo.svg) no-repeat;
+.burger-menu {
+  display: none;
 }
 
-.mobile-menu__item:not(:last-child) {
-  margin-bottom: 24px;
+.nav__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background: black;
+}
+
+.nav__link {
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 25px;
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+
+.nav__items > li {
+  margin-left: 20px;
+  list-style-type: none;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background: black;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 20px;
+  height: 100%;
+  width: 100%;
+  color: #533738;
+}
+
+.bmbtn {
+  background: url(../img/mobile-menu/burger-close.svg) no-repeat;
+  width: 24px;
+  height: 24px;
+}
+
+@media (max-width: 1313px) {
+  img {
+    max-width: 100%;
+  }
+  .nav {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .feedback__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .feedback__item {
+    padding-right: 0;
+    margin-top: 20px;
+  }
+  .form__item {
+    padding-left: 0;
+    max-width: 600px;
+  }
+  .team__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .about__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 1100px) {
+  .nav-in-burger {
+    position: fixed;
+    top: 21%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 32px;
+    z-index: 25;
+    width: 100%;
+    height: 100%;
+    left: 24px;
+  }
+  .nav-items-in-burger {
+    display: block;
+    list-style-type: none;
+  }
+  .nav-items-in-burger > li {
+    margin-top: 40px;
+  }
+  .nav-number-in-burger {
+    display: none;
+    position: relative;
+    top: -110px;
+    background: black;
+  }
+  .nav-number-in-burger > li {
+    position: absolute;
+    list-style-type: none;
+  }
+  .logo-in-burger {
+    display: none;
+  }
+  .burger-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 56px;
+    background-color: transparent;
+    border-bottom: 1px solid transparent;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    z-index: 15;
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+  }
+  .burger-menu-open {
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+    bottom: 0;
+    top: 0;
+    height: 100%;
+    background: black;
+  }
+  .burger-menu > span {
+    position: absolute;
+    right: 24px;
+    top: 40px;
+    cursor: pointer;
+    font-size: 48px;
+    font-weight: 400;
+  }
+  .burger__logo {
+    position: absolute;
+    left: 24px;
+    top: 38px;
+    font-size: 22px;
+    font-weight: 500;
+  }
+  .about__text {
+    text-align: center;
+  }
+  .nav {
+    display: none;
+  }
+  .hero {
+    margin-top: 0;
+    margin-left: 60px;
+    padding: 100px 0 100px 0;
+  }
+  .about__footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .about__footer > span {
+    margin-top: 50px;
+  }
+  .about__footer > span:last-child {
+    margin-bottom: 50px;
+  }
+  .work__title {
+    text-align: center;
+  }
+  .how-we-work__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .reviews__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .reviews__item-arrow {
+    display: none;
+  }
+  .footer {
+    padding: 37px 30px 37px 30px;
+  }
+  .footer__item {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer__item-adress {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 527px) {
+  .hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0;
+    text-align: center;
+  }
+  .hero__title {
+    font-size: 1.875em;
+  }
+  .work__image-hover > p {
+    display: none;
+  }
+  .team__items {
+    margin: 0;
+  }
+  .about__text {
+    padding: 30px;
+  }
+  .reviews__item-content-text {
+    padding-left: 20px;
+    margin-right: 0;
+  }
+  .form__number-format {
+    display: none;
+  }
+  .work__image:nth-child(2),
+  .work__image:nth-child(4) {
+    margin-left: 0;
+  }
+  .work__image {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .work__image {
+    margin: 0;
+  }
+  iframe {
+    display: none;
+  }
+}
+
+@media (min-width: 1890px) {
+  .work__items {
+    margin: 0 300px;
+  }
 }
 
 .header {
