--- a/source/components/_mobile-menu.scss
+++ b/source/components/_mobile-menu.scss
@@ -3,37 +3,23 @@
     width: 100%;
   }
   .logo {
-      display: flex;
-      align-items: center;
-      background: url(../img/mobile-menu/logo.svg) no-repeat;
       width: 160px;
       height: 32px;
+      @include flexiblePlacement(none, none, none, none);
+      background: url(../img/mobile-menu/logo.svg) no-repeat;
       background-size: contain;
-    }
-    .logo > li > a:hover {
-      text-decoration: none;
-    }
-    .nav__number > li > a:hover {
-      text-decoration: none;
-    }
-    .view-more:hover {
-      text-decoration: none;
     }
     
     .nav {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding-left: 125px;
-      padding-right: 125px;
-      padding-top: 40px;
+      @include flexiblePlacement(space-around, none, none, none);
     }
+
     .burger-menu {
       display: none;
     }
+
     .nav__items {
-      display: flex;
-      justify-content: space-around;
+      @include flexiblePlacement(space-around, none, none, none);
       background: black;
     }
   
@@ -43,23 +29,6 @@
       line-height: 25px;
       color: white;
       text-decoration: none;
-      list-style: none;
-    }
-    .nav__items > li {
-      margin-left: 20px;
-      list-style-type: none;
-    }
-  
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background: black;
-      margin: 0;
-      padding: 0;
-      font-size: 16px;
-      line-height: 20px;
-      height: 100%;
-      width: 100%;
-      color: #533738;
     }
     
     .bmbtn {
@@ -67,54 +36,28 @@
       width: 24px;
       height: 24px;
     }
-  
-    @media (max-width: 1313px) {
-      img {
-        max-width: 100%;
-      }
-      .nav {
-        padding-left: 0;
-        padding-right: 0;
-      }
-      .feedback__items {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .feedback__item {
-        padding-right: 0;
-        margin-top: 20px;
-      }
-      .form__item {
-        padding-left: 0;
-        max-width: 600px;
-      }
-    
-      .team__items {
-        flex-wrap: wrap;
-      }
-      .about__content {
-        flex-wrap: wrap;
-      }
-    }
     
     @media (max-width: 1100px) {
       .nav-in-burger {
-        position: fixed;
+        @include flexiblePlacement(none, none, none, none);
+        position: absolute;
         top: 21%;
-        display: flex;
-        font-size: 32px;
-        z-index: 25;
         width: 100%;
         height: 100%;
         left: 24px;
+        font-size: 32px;
+        z-index: 25;
       }
+
       .nav-items-in-burger {
         display: block;
         list-style-type: none;
       }
+
       .nav-items-in-burger > li {
         margin-top: 40px;
       }
+
       .nav-number-in-burger {
         display: none;
         position: relative;
@@ -125,9 +68,11 @@
         position: absolute;
         list-style-type: none;
       }
+
       .logo-in-burger {
         display: none;
       }
+
       .burger-menu {
         display: flex;
         position: fixed;
@@ -143,6 +88,7 @@
         z-index: 15;
         transition: 0.3s ease-in-out;
       }
+
       .burger-menu-open {
         transition: 0.5s ease-in-out;
         overflow: hidden;
@@ -151,6 +97,7 @@
         height: 100%;
         background: black;
       }
+
       .burger-menu > span {
         position: absolute;
   
@@ -162,6 +109,7 @@
         font-weight: 400;
   
       }
+
       .burger__logo {
         position: absolute;
         left: 24px;
@@ -169,102 +117,8 @@
         font-size: 22px;
         font-weight: 500;
       }
-      .about__text {
-        text-align: center;
-      }
+
       .nav {
         display: none;
-      }
-      .hero {
-        margin-top: 0;
-        margin-left: 60px;
-        padding: 100px 0 100px 0;
-      }
-      .about__footer {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding-left: 0;
-        padding-right: 0;
-      }
-      .about__footer > span {
-        margin-top: 50px;
-      }
-      .about__footer > span:last-child {
-        margin-bottom: 50px;
-      }
-      .work__title {
-        text-align: center;
-      }
-      .how-we-work__items {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .reviews__items {
-        flex-wrap: wrap;
-      }
-      .reviews__item-arrow {
-        display: none;
-      }
-      .footer {
-        padding: 37px 30px 37px 30px;
-      }
-      .footer__item {
-        flex-wrap: wrap;
-      }
-      .footer__item-adress {
-        margin-left: 0;
-        margin-top: 10px;
-      }
     }
-    
-    @media (max-width: 527px) {
-      .hero {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin: 0;
-        text-align: center;
-      }
-      .hero__title {
-        font-size: 1.875em;
-      }
-      .work__image-hover > p {
-        display: none;
-      }
-      .team__items {
-        margin: 0;
-      }
-      .about__text {
-        padding: 30px;
-      }
-      .reviews__item-content-text {
-        padding-left: 20px;
-        margin-right: 0;
-      }
-      .form__number-format {
-        display: none;
-      }
-      .work__image:nth-child(2),
-      .work__image:nth-child(4) {
-        margin-left: 0;
-      }
-      .work__image {
-        margin-bottom: 20px;
-      }
-    }
-    
-    @media (max-width: 400px) {
-      .work__image {
-        margin: 0;
-      }
-      iframe {
-        display: none;
-      }
-    }
-    
-    @media (min-width: 1890px) {
-      .work__items {
-        margin: 0 300px;
-      }
-    }
+}
