--- a/source/components/main.css
+++ b/source/components/main.css
@@ -156,28 +156,25 @@ input {
 }
 
 .logo {
+  width: 160px;
+  height: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: none;
+      -ms-flex-pack: none;
+          justify-content: none;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: none;
+          flex-direction: none;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
   background: url(../img/mobile-menu/logo.svg) no-repeat;
-  width: 160px;
-  height: 32px;
   background-size: contain;
-}
-
-.logo > li > a:hover {
-  text-decoration: none;
-}
-
-.nav__number > li > a:hover {
-  text-decoration: none;
-}
-
-.view-more:hover {
-  text-decoration: none;
 }
 
 .nav {
@@ -186,12 +183,15 @@ input {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-left: 125px;
-  padding-right: 125px;
-  padding-top: 40px;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: none;
+          flex-direction: none;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
 }
 
 .burger-menu {
@@ -204,6 +204,15 @@ input {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-align: none;
+      -ms-flex-align: none;
+          align-items: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: none;
+          flex-direction: none;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
   background: black;
 }
 
@@ -213,24 +222,6 @@ input {
   line-height: 25px;
   color: white;
   text-decoration: none;
-  list-style: none;
-}
-
-.nav__items > li {
-  margin-left: 20px;
-  list-style-type: none;
-}
-
-body {
-  font-family: 'Montserrat', sans-serif;
-  background: black;
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  line-height: 20px;
-  height: 100%;
-  width: 100%;
-  color: #533738;
 }
 
 .bmbtn {
@@ -239,51 +230,30 @@ body {
   height: 24px;
 }
 
-@media (max-width: 1313px) {
-  img {
-    max-width: 100%;
-  }
-  .nav {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .feedback__items {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .feedback__item {
-    padding-right: 0;
-    margin-top: 20px;
-  }
-  .form__item {
-    padding-left: 0;
-    max-width: 600px;
-  }
-  .team__items {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .about__content {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
 @media (max-width: 1100px) {
   .nav-in-burger {
-    position: fixed;
-    top: 21%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-size: 32px;
-    z-index: 25;
+    -webkit-box-pack: none;
+        -ms-flex-pack: none;
+            justify-content: none;
+    -webkit-box-align: none;
+        -ms-flex-align: none;
+            align-items: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: none;
+            flex-direction: none;
+    -ms-flex-wrap: none;
+        flex-wrap: none;
+    position: absolute;
+    top: 21%;
     width: 100%;
     height: 100%;
     left: 24px;
+    font-size: 32px;
+    z-index: 25;
   }
   .nav-items-in-burger {
     display: block;
@@ -351,118 +321,8 @@ body {
     font-size: 22px;
     font-weight: 500;
   }
-  .about__text {
-    text-align: center;
-  }
   .nav {
     display: none;
-  }
-  .hero {
-    margin-top: 0;
-    margin-left: 60px;
-    padding: 100px 0 100px 0;
-  }
-  .about__footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .about__footer > span {
-    margin-top: 50px;
-  }
-  .about__footer > span:last-child {
-    margin-bottom: 50px;
-  }
-  .work__title {
-    text-align: center;
-  }
-  .how-we-work__items {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .reviews__items {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .reviews__item-arrow {
-    display: none;
-  }
-  .footer {
-    padding: 37px 30px 37px 30px;
-  }
-  .footer__item {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .footer__item-adress {
-    margin-left: 0;
-    margin-top: 10px;
-  }
-}
-
-@media (max-width: 527px) {
-  .hero {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin: 0;
-    text-align: center;
-  }
-  .hero__title {
-    font-size: 1.875em;
-  }
-  .work__image-hover > p {
-    display: none;
-  }
-  .team__items {
-    margin: 0;
-  }
-  .about__text {
-    padding: 30px;
-  }
-  .reviews__item-content-text {
-    padding-left: 20px;
-    margin-right: 0;
-  }
-  .form__number-format {
-    display: none;
-  }
-  .work__image:nth-child(2),
-  .work__image:nth-child(4) {
-    margin-left: 0;
-  }
-  .work__image {
-    margin-bottom: 20px;
-  }
-}
-
-@media (max-width: 400px) {
-  .work__image {
-    margin: 0;
-  }
-  iframe {
-    display: none;
-  }
-}
-
-@media (min-width: 1890px) {
-  .work__items {
-    margin: 0 300px;
   }
 }
 
