--- a/source/components/_mobile-menu.scss
+++ b/source/components/_mobile-menu.scss
@@ -1,44 +1,46 @@
 .header-mobile {
     background: black;
     width: 100%;
-  }
-  .logo {
-      width: 160px;
-      height: 32px;
-      @include flexiblePlacement(none, none, none, none);
-      background: url(../img/mobile-menu/logo.svg) no-repeat;
-      background-size: contain;
-    }
+}
+
+.logo {
+    @include flexiblePlacement(none, none, none, none);
+    width: 197px;
+    height: 32px;
+    background: url(../img/mobile-menu/logo.svg) no-repeat;
+}
     
-    .nav {
-      @include flexiblePlacement(space-around, none, none, none);
-    }
+.nav {
+    @include flexiblePlacement(space-around, none, none, none);
+}
 
-    .burger-menu {
-      display: none;
-    }
+.burger-menu {
+    display: none;
+}
 
-    .nav__items {
-      @include flexiblePlacement(space-around, none, none, none);
-      background: black;
-    }
+.nav__items {
+    @include flexiblePlacement(space-around, none, none, none);
+    background: black;
+}
   
-    .nav__link {
-      text-transform: uppercase;
-      font-size: 24px;
-      line-height: 25px;
-      color: white;
-      text-decoration: none;
-    }
+.nav__link {
+    text-transform: uppercase;
+    font-size: 24px;
+    line-height: 25px;
+    color: white;
+    text-decoration: none;
+}
+
+.bmbtn {
+    background: url(../img/mobile-menu/burger-menu.svg) no-repeat;
+    width: 24px;
+    height: 20px;
+    background-size: contain;
+    cursor: pointer;
+}
     
-    .bmbtn {
-      background: url(../img/mobile-menu/burger-close.svg) no-repeat;
-      width: 24px;
-      height: 24px;
-    }
-    
-    @media (max-width: 1100px) {
-      .nav-in-burger {
+@media (max-width: 1100px) {
+    .nav-in-burger {
         @include flexiblePlacement(none, none, none, none);
         position: absolute;
         top: 21%;
@@ -46,79 +48,65 @@
         height: 100%;
         left: 24px;
         font-size: 32px;
-        z-index: 25;
-      }
+    }
 
-      .nav-items-in-burger {
+    .nav-items-in-burger {
         display: block;
         list-style-type: none;
-      }
+    }
 
-      .nav-items-in-burger > li {
-        margin-top: 40px;
-      }
+    .nav-items-in-burger > li {
+        margin-bottom: 24px;
+    }
 
-      .nav-number-in-burger {
+    .nav-number-in-burger {
         display: none;
         position: relative;
         top: -110px;
         background: black;
-      }
-      .nav-number-in-burger > li {
+    }
+
+    .nav-number-in-burger > li {
         position: absolute;
         list-style-type: none;
-      }
+    }
 
-      .logo-in-burger {
-        display: none;
-      }
-
-      .burger-menu {
-        display: flex;
-        position: fixed;
-        left: 0;
-        width: 100%;
-        height: 56px;
-        background-color: transparent;
-        border-bottom: 1px solid transparent;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        z-index: 15;
-        transition: 0.3s ease-in-out;
-      }
-
-      .burger-menu-open {
-        transition: 0.5s ease-in-out;
-        overflow: hidden;
-        bottom: 0;
-        top: 0;
-        height: 100%;
-        background: black;
-      }
-
-      .burger-menu > span {
-        position: absolute;
-  
-        right: 24px;
-        top: 40px;
-    
-        cursor: pointer;
-        font-size: 48px;
-        font-weight: 400;
-  
-      }
-
-      .burger__logo {
-        position: absolute;
-        left: 24px;
-        top: 38px;
-        font-size: 22px;
-        font-weight: 500;
-      }
-
-      .nav {
+    .logo-in-burger {
         display: none;
     }
+
+    .burger-menu {
+        @include flexiblePlacement(center, space-between, none, none);
+        position: absolute;
+        width: 100%;
+        background-color: transparent;
+        transition: 0.3s ease-in-out;
+    }
+
+    .burger-menu-open {
+        transition: 0.2s ease-in-out;
+        height: 92%;
+        background: black;
+    }
+
+    .burger-menu > span {
+        position: absolute;
+        right: 24px;
+        top: 45px;
+    }
+
+    .burger__logo {
+        position: absolute;
+        left: 24px;
+        top: 40px;
+    }
+
+    .nav {
+        display: none;
+    }
+}
+
+.bmbtn_active {
+    background: url(../img/mobile-menu/burger-close.svg) no-repeat;
+    background-size: contain;
 }
